@@ -165,12 +165,12 @@
 
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
+          <version>3.8.1</version>
         </plugin>
 
         <plugin>
           <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.5.1</version>
+          <version>3.3.0</version>
         </plugin>
 
         <plugin>
@@ -215,13 +215,13 @@
 
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-          <version>2.5</version>
+          <version>3.3.1</version>
         </plugin>
 
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-shade-plugin</artifactId>
-          <version>2.3</version>
+          <version>3.2.4</version>
         </plugin>
 
         <plugin>
@@ -231,7 +231,12 @@
 
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.18.1</version>
+          <version>2.22.2</version>
+        </plugin>
+
+        <plugin>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>2.22.2</version>
         </plugin>
 
         <plugin>
@@ -580,7 +585,7 @@
       <dependency>
         <groupId>org.easymock</groupId>
         <artifactId>easymock</artifactId>
-        <version>4.2</version>
+        <version>4.3</version>
         <scope>test</scope>
       </dependency>
 
@@ -744,6 +749,34 @@
               <artifactId>maven-surefire-plugin</artifactId>
               <configuration>
                 <excludedGroups>java6</excludedGroups>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+
+    <profile>
+      <id>java9+</id>
+      <activation>
+        <jdk>[9,)</jdk>
+      </activation>
+      <build>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-surefire-plugin</artifactId>
+              <configuration>
+                <argLine>
+                  <!--
+                    deny all reflective access except:
+                     - java.base/java.lang for Easymock (see https://github.com/easymock/easymock/issues/235)
+                     - java.management/javax.management.modelmbean for org.jolokia.jmx.JolokiaMBeanServerTest
+                  -->
+                  --illegal-access=deny
+                  --add-opens java.base/java.lang=ALL-UNNAMED
+                  --add-opens java.management/javax.management.modelmbean=ALL-UNNAMED
+                </argLine>
               </configuration>
             </plugin>
           </plugins>
